Modern versioning setup

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,4 +1,15 @@
 [build-system]
-requires = ["setuptools", "wheel"]
+requires = ["setuptools", "setuptools_scm[toml]", "wheel"]
 build-backend = "setuptools.build_meta"
+
+[project]
+authors = [{name = "devforfu", email = "developer.z@outlook.com"}]
+classifiers = ["Programming Langauge :: Python :: 3"]
+description = "A package helping to navigate nested structures easily"
+dynamic = ["version"]
+name = "needle"
+requires-python = ">=3.9"
+
+[tool.setuptools_scm]
+write_to = "needle/_version.py"
 
