--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ description = "A package helping to navigate nested structures easily"
 dynamic = ["version"]
 name = "needle"
 requires-python = ">=3.9"
+dependencies = ["rich"]
 
 [project.optional-dependencies]
 test = ["pytest"]
