--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,3 +16,5 @@ test = ["pytest"]
 
 [tool.setuptools_scm]
 write_to = "needle/_version.py"
+version_scheme = "guess-next-dev"
+local_scheme = "no-local-version"
