--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ authors = [{name = "devforfu", email = "developer.z@outlook.com"}]
 classifiers = ["Programming Language :: Python :: 3"]
 description = "A package helping to navigate nested structures easily"
 dynamic = ["version"]
-name = "needle"
+name = "needle-search"
 requires-python = ">=3.9"
 dependencies = ["rich"]
 
