--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ name = "python-needle"
 requires-python = ">=3.9"
 dependencies = ["rich"]
 readme = "README.md"
+url = "https://github.com/devforfu/needle"
 
 [project.optional-dependencies]
 test = ["pytest"]
